--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,8 +3,12 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background: #caf0fd;
 }
 
+body {
+  background-color: #caf0fd;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
