--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Suez+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color: #49a3e822;
+}
 /* Add this CSS to your stylesheet */
 .bttn {
   background-color: white;
